--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "next": "14.2.14",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "typescript": "5.6.2"
+    "swr": "^2.2.5",
+    "typescript": "5.6.2",
+    "zustand": "^5.0.0-rc.2"
   }
 }
